# Narrow-gate

./: .gitignore  .gitmodules  Dockerfile  README.md  index.html  pyproject.toml
evaluation_task/: README.md
evaluation_task/ai2d/: ai2d.py  eval.py
evaluation_task/caption/: all_caption.py
evaluation_task/caption/eval/cider_metrics/: cider.py  cider_scorer_original.py  eval_json.py
evaluation_task/vqa/: all_vqa.py
evaluation_task/vqa/eval/: eval_vqa.py
paper_experiments/: 1_CosineSimilarity_and_Homogeneity.py  2_CrossAttention.py  3.1_overlap_ablation.py  3_overlap_sec_4-2.py  4_AblationVQA.py  5_AblationCaptioning.py  6_ActivationPatching.py  Fig2_CosSim_Hom.py  Fig3_CrossAttention.py  Fig4_OverlapImagenet.py  Fig5_ActivationPatching.py  FigA3_OverlapAblation.py  Tab1_AblationCaptioning.py  Tab1_AblationVQA.py  probe_utils.py  utils.py
paper_experiments/slurm_scripts/: slurm_script.sh  slurm_script_cossim_hom.sh  slurm_script_emu.sh  slurm_script_emu_1.sh  slurm_script_tmp.sh
src/: README.md  ablation.py  activations.py  hooks.py  token_index.dict  utils.py
src/common/: ActivationLoader.py  emu_utils.py  global_vars.py
src/data/: __init__.py  download_wn.py  imagenet.py  imagenet_classes.py  imagenet_graph.py
src/evaluation/: vqaEvaluation.py
src/metrics/: README.md  attention_heads.py  intrinsic_dimension.py  linear_probe.py  overlap.py  overlap_old.py  residual_stream.py
src/model/AIMv2/: modeling_aimv2.py  modeling_flax_aimv2.py
src/model/emu1/: __init__.py  inference.py  utils.py
src/model/emu1/models/: modeling_emu.py  modeling_llama.py
src/model/emu3/: modeling_emu3.py  processing_emu3.py  tokenization_emu3.py
src/model/vilaU/: builder.py  conversation.py  mm_utils.py  vila_u_arch.py
src/model/vilaU/language_model/: vila_u_llama.py
src/plot/: README.md  attn_pattern.py  orthogonality.py  patching.py
static/css/: index.css
transformers/models/llama/: modeling_llama.py  modelling_llama.py
transformers/models/mistral/: modeling_mistral.py  modular_mistral.py
transformers/models/pixtral/: modeling_pixtral.py
(+6 files in other folders)
